# RustOS

./: .gitignore  Cargo.toml  README.md  build.rs  compile_projects.py  program_link.ld  rootdisk.img  start.sh
.cargo/: config.toml
compiled_projects/: testing_project
kernel/: Cargo.toml  rootdisk.img
kernel/.cargo/: config-bench.toml  config.toml
kernel/kernel_std/: Cargo.toml
kernel/kernel_std/derive/: Cargo.toml
kernel/kernel_std/derive/src/: lib.rs
kernel/kernel_std/src/: bitset.rs  boxed.rs  heap_tree.rs  lib.rs  malloc.rs  malloc2.rs  mutable.rs  pointer.rs  print.rs  serial.rs  spinlock.rs  string.rs  vector.rs
kernel/kernel_test/src/: lib.rs
kernel/src/: boot.rs  console.rs  disk.rs  elf.rs  filesystem.rs  font.rs  gdt.rs  gpu.rs  input.rs  interrupts.rs  keyboard.rs  main.rs  memory.rs  memory_disk.rs  mutable.rs  plic.rs  ports.rs  print.rs  program_runner.rs  rand.rs  riscv.rs  scheduler.rs  shell.rs  spinlock.rs  text_renderer.rs  timer.rs  trap.rs  vga_driver.rs
kernel/src/asm/: kernelvec.S  uservec.S
kernel/src/disk/: disk.rs  filesystem.rs  memory_disk.rs  mod.rs
kernel/src/lds/: virt.lds
kernel/src/memory/: bitset.rs  heap_tree.rs  malloc.rs  mod.rs  paging.rs  utils.rs
kernel/src/std/: box.rs  mod.rs
kernel/src/tests/: A0_elementary.rs  A0_rand.rs  A1_bitset.rs  A1_utils.rs  A2_bitset.rs  A2_paging.rs  A3_heap_tree.rs  A3_malloc.rs  A3_paging.rs  A4_box.rs  A4_heap_tree.rs  A4_malloc.rs  A5_box.rs  A5_malloc.rs  A5_vector.rs  A6_box.rs  A6_string.rs  A6_vector.rs  A7_disk.rs  A7_string.rs  A7_vector.rs  A8_disk.rs  A8_memory_disk.rs  A9_filesystem.rs  A9_memory_disk.rs  B0_filesystem.rs  B0_scheduler.rs  elementary.rs  memory.rs  mod.rs
kernel/src/virtio/: definitions.rs  device.rs
kernel/std/: Cargo.toml
kernel/std/derive/src/: lib.rs
kernel/std/src/: lib.rs  malloc.rs  pointer.rs  print.rs  rand.rs  spinlock.rs  string.rs  vector.rs
kernel_test/: Cargo.toml
kernel_test/src/: lib.rs
programs/: compile_programs.py
programs/.cargo/: config.toml
programs/test_program/: Cargo.toml
programs/test_program/.cargo/: config.toml
programs/test_program/src/: main.rs
programs/test_program/src/asm/: entry.S
programs/test_program/src/lds/: virt.lds
programs/test_program1/src/: main.rs
programs/test_program2/src/: main.rs
projects/testing_project/: Cargo.toml
projects/testing_project/src/: main.rs
src/: boot.rs  entry.S  gpu.rs  graphics.rs  input.rs  interrupts.rs  keyboard.rs  main.rs  plic.rs  print.rs  riscv.rs  spinlock.rs  timer.rs  trap.rs  uart.rs  vga_driver.rs  virtio.rs
src/asm/: entry.S  kernelvec.S
src/disk/: disk.rs  filesystem.rs  memory_disk.rs  mod.rs
src/lds/: virt.lds
src/memory/: bitset.rs  mod.rs  paging.rs
src/tests/: A0_rand.rs  A1_bitset.rs  A2_bitset.rs  A2_paging.rs  A3_heap_tree.rs  A3_paging.rs  A4_heap_tree.rs  A4_malloc.rs  A5_box.rs  A5_malloc.rs  A6_box.rs  A6_vector.rs  A7_string.rs  A7_vector.rs  A8_disk.rs  A9_memory_disk.rs  elementary.rs  mod.rs
src/virtio/: definitions.rs  device.rs  mod.rs
std/: Cargo.toml
std/derive/src/: lib.rs
std/src/: box.rs  boxed.rs  heap_tree.rs  lib.rs  malloc.rs  pointer.rs  print.rs  rand.rs  serial.rs  spinlock.rs  string.rs  syscall.rs  utils.rs  vector.rs
std/src/asm/: entry.S
std/src/lds/: virt.lds
std/std_derive/: Cargo.toml
std/std_derive/src/: lib.rs
