[package]
name = "RustOS"
version = "0.1.0"

[features]
run_tests = ["kernel/run_tests"]
run_perf = ["kernel/run_perf"]

[build-dependencies]
bootloader = { version = "0.11", default-features = false, features = ["uefi"] }
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }

[dependencies]
# used for UEFI booting in QEMU
ovmf-prebuilt = "0.1.0-alpha.1"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"

[workspace]
members = ["kernel", "kernel_test", "projects/testing_project", "std"]

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
allow_attributes_without_reason = "warn"
assertions_on_result_states = "warn"
create_dir = "warn"
decimal_literal_representation = "warn"
deref_by_slicing = "warn"
empty_structs_with_brackets = "warn"
exit = "warn"
expect_used = "warn"
float_cmp_const = "warn"
fn_to_numeric_cast_any = "warn"
format_push_string = "warn"
if_then_some_else_none = "warn"
indexing_slicing = "warn"
map_err_ignore = "warn"
mem_forget = "warn"
non_ascii_literal = "warn"
panic = "warn"
panic_in_result_fn = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_name_method = "warn"
single_char_lifetime_names = "warn"
str_to_string = "warn"
string_to_string = "warn"
try_err = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
verbose_file_reads = "warn"
if_not_else = "warn"
from_iter_instead_of_collect = "warn"
ignored_unit_patterns = "warn"
inefficient_to_string = "warn"
impl_trait_in_params = "warn"
items_after_statements = "warn"
large_digit_groups = "warn"
large_stack_arrays = "warn"
manual_map = "warn"
manual_non_exhaustive = "warn"
implicit_clone = "warn"
inconsistent_struct_constructor = "warn"
index_refutable_slice = "warn"
manual_assert = "warn"
manual_clamp = "warn"
manual_instant_elapsed = "warn"
manual_let_else = "warn"
manual_ok_or = "warn"
manual_string_new = "warn"
map_unwrap_or = "warn"
match_bool = "warn"
match_on_vec_items = "warn"
match_same_arms = "warn"
match_wild_err_arm = "warn"
match_wildcard_for_single_variants = "warn"
missing_const_for_fn = "warn"
mixed_read_write_in_expression = "warn"
mut_mut = "warn"
mutex_atomic = "warn"
mutex_integer = "warn"
naive_bytecount = "warn"
needless_bitwise_bool = "warn"
needless_collect = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_ref_mut = "warn"
needless_pass_by_value = "warn"
needless_raw_string_hashes = "warn"
needless_raw_strings = "warn"
no_effect_underscore_binding = "warn"
option_option = "warn"
pub_without_shorthand = "warn"
range_minus_one = "warn"
range_plus_one = "warn"
redundant_clone = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
redundant_pub_crate = "warn"
redundant_type_annotations = "warn"
ref_binding_to_reference = "warn"
ref_option_ref = "warn"
ref_patterns = "warn"
return_self_not_must_use = "warn"
same_functions_in_if_condition = "warn"
semicolon_if_nothing_returned = "warn"
semicolon_inside_block = "warn"
stable_sort_primitive = "warn"
unnecessary_box_returns = "warn"
unnecessary_join = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unnecessary_struct_initialization = "warn"
unnecessary_wraps = "warn"
unnested_or_patterns = "warn"
unreadable_literal = "warn"
unused_async = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
unused_self = "warn"
wildcard_dependencies = "warn"
zero_sized_map_values = "warn"

cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
suboptimal_flops = "allow"
cast_lossless = "allow"
module_name_repetitions = "allow"
struct_excessive_bools = "allow"
similar_names = "allow"
ptr_as_ptr = "allow"
shadow_unrelated = "allow"
many_single_char_names = "allow"
significant_drop_tightening = "allow"
new_without_default = "allow"
module_inception = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
todo = "allow"
unimplemented = "allow"
type_complexity = "allow"
too_many_arguments = "allow"
struct_field_names = "allow"
iter_without_into_iter = "allow"
multiple_crate_versions = "allow"
missing_safety_doc = "allow"
cargo_common_metadata = "allow"
zero_ptr = "allow"
