[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[features]
run_tests = []
run_perf = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader_api = "0.11"
std = { path = "../std", features = ["test_includes"] }
kernel_test = { path = "../kernel_test" }

[profile.dev]
#panic = "abort"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"